[package]
name = "unusual_forms"
version = "0.1.0"
edition = "2021"


[lib]
path="src/lib.rs"
name="mylib"
[[bin]]
path = "src/main.rs"
name="unusual_forms"



[dependencies]
actix-web = "4.0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.11"
serde = "1.0.115"
serde-aux = "3"
bson = "2.2.0"
log ="0.4"
simplelog = "0.9"
chrono = "0.4"
tracing = { version = "0.1", features = ["log"] }
futures = "0.3"
cargo-watch = "8.1.1"
env_logger = "0.9"
serde_json = "1.0.81"


[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

